[tool.poetry]
name = "mobileintegrationtests"
version = "0.1.0"
description = ""
authors = ["Крисанов Роман Валерьевич <284712@niuitmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
pytest = "^7.3.1"
pytest-order = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
